// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collapse style-only expression 1`] = `
"const props = {
  className: \\"props_4d3\\"
};
css(\`
	/* 1 */
	.props_4d3 { color: red }
\`);"
`;

exports[`collapse style-only expression 2`] = `
"const props = {
  className: \\"props_4d3\\"
};
css(\`
	/* 1 */
	.props_4d3 { color: red }
\`);"
`;

exports[`pass SpreadElement-do to element 1`] = `
"() => create(\\"div\\", {
  className: \\"foo_16j\\"
});

css(\`
	/* 2 */
	.foo_16j { background: blue; color: red }
\`);"
`;

exports[`pass SpreadElement-do to element 2`] = `
"() => <div className=\\"foo_16j\\" />;

css(\`
	/* 2 */
	.foo_16j { background: blue; color: red }
\`);"
`;
